--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,12 @@
   </head>
   <body>
     <app-root></app-root>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript">
+      const stripe = Stripe(
+        "pk_test_51H9gmxBd2ZddnxHeo5SpUwbTn5PEofkiRPFAyYiJwnyesaIr1MhbqqUEtEXNsf0VdV34u3gYzjjxiuyrCrtR6lsk008QhNC5aF"
+      );
+      const elements = stripe.elements();
+    </script>
   </body>
 </html>
